[gd_scene load_steps=5 format=3 uid="uid://dkss84gko5u2y"]

[ext_resource type="Texture2D" uid="uid://sv0apcssrcer" path="res://sprites/heart.png" id="1_6s5nh"]
[ext_resource type="Script" uid="uid://qpghe2kagrk7" path="res://script/heal_blob.gd" id="1_bvsxq"]
[ext_resource type="AudioStream" uid="uid://c8opxja6od7u0" path="res://sounds/heal.mp3" id="3_dp8p5"]

[sub_resource type="CircleShape2D" id="CircleShape2D_bvsxq"]
radius = 25.0

[node name="heal_blob" type="Node2D"]
script = ExtResource("1_bvsxq")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_6s5nh")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_bvsxq")

[node name="teleport_timer" type="Timer" parent="."]
wait_time = 15.0
autostart = true

[node name="HealSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_dp8p5")
volume_db = 3.0
bus = &"Heal"

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="teleport_timer" to="." method="_on_teleport_timer_timeout"]
